# Clamp

./: .gitignore  CMakeLists.txt
src/: BoardState.cc  BoardState.h
tests/: BoardStateTests.cc
